cmake_minimum_required(VERSION 3.8)
project(messages_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(realsense2_camera_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
set(srv_files
  "srv/PoseDetect.srv")
rosidl_generate_interfaces(${PROJECT_NAME}
srv/PoseDetect.srv
DEPENDENCIES std_msgs sensor_msgs realsense2_camera_msgs
)
ament_export_dependencies(rosidl_default_runtime)
ament_package()
