<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>messages_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="katsu2yukkuri@gmail.com">nyanziba</maintainer>
  <license>TODO: License declaration</license>
 <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>realsense2_camera_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_interface_packages</depend>
  <depend>sensor_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
